--- a/alt-index.html
+++ b/alt-index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>ARTS XXX Journal | Firstname Lastname</title>
+		<title>ARTS 486 Journal | Steven Sclafani</title>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/grid-utils.css">
 		<link rel="stylesheet" href="css/style.css">
@@ -25,14 +25,14 @@
 				<div class="width-12-12-m width-4-12 height-8" id="aside">
 					<div class="aside-holder">
 						<div class="thumb-box">
-							<h3>ARTS 4XX<br />
-							The Title of the Course</h3>
+							<h3>ARTS 486<br />
+							Computer Graphics</h3>
 							<div class="half">
 								<img class="r-image" src="https://via.placeholder.com/700" title="image title" />
 							</div>
 							<div class="half">
-								<h4>Firstname Lastname</h4>
-								<p>Short bio here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rutrum efficitur imperdiet. Morbi nibh turpis, posuere ac fermentum ac, tincidunt sit amet tortor.</p>
+								<h4>Steven Sclafani</h4>
+								<p>Senior graphic design major at Binghamton University. </p>
 								<p>
 									<a href="http://binghamton.edu" target="_blank">This is a link</a> <a href="http://binghamton.edu" target="_blank">This is another link</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
 								</p>
@@ -50,10 +50,9 @@
 				</div>
 
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
+					<img class="r-image" src="images/sketch1.png" title="Sketches" />
 					<div class="body">
-						<h1>Project 1:  Ipsum Lorem</h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
+						<h1>Project 1:  As We May Rethink</h1>
 						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
 						</p>
 					</div>
@@ -65,6 +64,7 @@
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
 						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
 						</p>
+						<p><a href="images/spec.pdf"> Functional Specifications </a>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
