--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<img class="r-image" src="images/sketch1.png" title="Sketches" />
 					<div class="body">
 						<h1>Project 1:  As We May Rethink</h1>
-						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
+						<p>My initial ideas for the Camera of the Future was to modernize it to keep up with today's industry standards. The Camera of the Future will require bluetooth connection and a mobile smartphone app to utilize its full capabilities.
 						</p>
 					</div>
 				</div>
