--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="images/sketch1.png" title="Sketches" />
 					<div class="body">
-						<h1>Project 1:  As We May Rethink</h1>
+						<h1>Project 1:  As We May Rethink Sketch</h1>
 						<p>My initial ideas for the Camera of the Future was to modernize it to keep up with today's industry standards. The Camera of the Future will require bluetooth connection and a mobile smartphone app to utilize its full capabilities.
 						</p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
+					<img class="r-image" src="images/userflow.pdf" title="image title" />
 					<div class="body">
-						<h1>Project 1:  Ipsum Lorem</h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
+						<h1>Microcam Userflow Diagram</h1>
+						<p><img class="r-image" src="images/userflowXD.pdf"></p>
+						<p> The diagram consists of four speicifc users with intentions of using the Microcam & accompanying app. The app user flow displays the elementary processes in starting up and using the Microcam application.
 						</p>
 						<p><a href="images/spec.pdf"> Functional Specifications </a>
 					</div>
