--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<img class="r-image" src="images/userflow.pdf" title="image title" />
 					<div class="body">
 						<h1>Microcam Userflow Diagram</h1>
-						<p><img class="r-image" src="images/userflowXD.pdf"></p>
+						<p><img class="r-image" src="images/userflowXD.pdf" a href="images/userflowXD.pdf"></p>
 						<p> The diagram consists of four speicifc users with intentions of using the Microcam & accompanying app. The app user flow displays the elementary processes in starting up and using the Microcam application.
 						</p>
 					</div>
