user flow a href

--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
 					<img class="r-image" src="images/userflow.pdf" title="image title" />
 					<div class="body">
 						<h1>Microcam Userflow Diagram</h1>
-						<p><a href="images/userflowXD.pdf"> <img class="r-image" src="images/userflowXD.pdf"></p>
+						<p><img class="r-image" src="images/userflowXD.pdf"></p>
 						<p> The diagram consists of four speicifc users with intentions of using the Microcam & accompanying app. The app user flow displays the elementary processes in starting up and using the Microcam application.
 						</p>
+						<p><a href="images/userflow.pdf"> User Flow </a>
+						<a href="images/userflowXD.pdf"> User Flow XD </a> </p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
