--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 						<p><img class="r-image" src="images/userflowXD.pdf"></p>
 						<p> The diagram consists of four speicifc users with intentions of using the Microcam & accompanying app. The app user flow displays the elementary processes in starting up and using the Microcam application.
 						</p>
-						<p><a href="images/userflow.pdf"> User Flow </a>
-						<a href="images/userflowXD.pdf"> User Flow XD </a> </p>
+						<p><a href="images/userflow.pdf" target="_blank"> User Flow </a>
+						<a href="images/userflowXD.pdf" target="_blank"> User Flow XD </a> </p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
