--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="images/userflow.pdf" title="image title" />
+					<img class="r-image" src="images/microcam.png" title="image title" />
 					<div class="body">
 						<h1>Microcam Userflow Diagram</h1>
-						<p><img class="r-image" src="images/microcam.png"></p>
+						<p><img class="r-image" src="images/userflowXD.pdf"></p>
 						<p> The diagram consists of four speicifc users with intentions of using the Microcam & accompanying app. The app user flow displays the elementary processes in starting up and using the Microcam application.
 						</p>
 						<p><a href="images/userflow.pdf" target="_blank"> User Flow </a>
