--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="images/sketch1.png" title="Sketches" />
 					<div class="body">
-						<h1>Project 1:  As We May Rethink Sketch</h1>
+						<h1>As We May Rethink Sketch</h1>
 						<p>My initial ideas for the Camera of the Future was to modernize it to keep up with today's industry standards. The Camera of the Future will require bluetooth connection and a mobile smartphone app to utilize its full capabilities.
 						</p>
 						<p><a href="images/funcspec2.pdf"> Functional Specifications </a>
 					</div>
 				</div>
+
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="images/microcam.png" title="image title" />
+					<img class="r-image" src="images/microcam.png" title="Microcam Home Screen" />
 					<div class="body">
 						<h1>Microcam Userflow Diagram</h1>
 						<p> The diagram consists of four speicifc users with intentions of using the Microcam & accompanying app. The app user flow displays the elementary processes in starting up and using the Microcam application.
@@ -68,6 +69,7 @@
 						<a href="images/userflowXD.pdf" target="_blank"> User Flow XD </a> </p> 
 					</div>
 				</div>
+				
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
