--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
 						<p> The diagram consists of four speicifc users with intentions of using the Microcam & accompanying app. The app user flow displays the elementary processes in starting up and using the Microcam application.
 						</p>
 						<p><a href="images/userflow.pdf" target="_blank"> User Flow </a>
-						<a href="images/userflowXD.pdf" target="_blank"> User Flow XD </a> </p> 
+						<a href="images/userflowXD.pdf" target="_blank"> User Flow XD </a> 
+						<a href="images/userflow2.pdf" target="_blank"> Alternate View XD </a> </p> 
 					</div>
 				</div>
-				
+
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
