--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 						<p> The diagram consists of four speicifc users with intentions of using the Microcam & accompanying app. The app user flow displays the elementary processes in starting up and using the Microcam application.
 						</p>
 						<p><a href="images/userflow.pdf" target="_blank"> <font color=F2243c> User Flow </a>
-						<a href="images/userflowXD.pdf" target="_blank"> User Flow XD </a> 
-						<a href="images/userflow2.pdf" target="_blank"> Alternate View XD </a> </p> 
+						<a href="images/userflowXD.pdf" target="_blank"> <font color=F2243c> User Flow XD </a> 
+						<a href="images/userflow2.pdf" target="_blank"> <font color=F2243c> Alternate View XD </a> </p> 
 					</div>
 				</div>
 
