added left masthead

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 		<div id="masthead">
 			<h4><a href="http://binghamton-design.com/">Binghamton University Art & Design</a></h4>
 		</div>
-
+		<div id="mastheadl">
+			<h4>Steven Sclafani</h4>
+		</div>
 		<div class="wrapper">
 
 			<div class="grid thumbs">
@@ -25,16 +27,16 @@
 				<div class="width-12-12-m width-4-12 height-8" id="aside">
 					<div class="aside-holder">
 						<div class="thumb-box">
-							<h3>Steven Sclafani</h3>
 							<div class="half">
 								<img class="r-image" src="https://via.placeholder.com/700" title="image title" />
 							</div>
+							<h3>Steven Sclafani</h3>
 							<div class="half">
 								<h4>ARTS 486 <br />
 								Computer Graphics</h4>
 								<p>Senior graphic design major at Binghamton University. </p>
 								<p>
-									<a href="http://binghamton.edu" target="_blank">This is a link</a> <a href="http://binghamton.edu" target="_blank">This is another link</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
+									<a href="http://steven.binghamton-design.com" target="_blank">ARTS 412 </a> <a href="http://binghamton.edu" target="_blank">This is another link</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
 								</p>
 							</div>
 						</div>
