--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>ARTS 486 Journal | Steven Sclafani</title>
+		<title>Steven Sclafani | ARTS 486</title>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/grid-utils.css">
 		<link rel="stylesheet" href="css/style.css">
@@ -28,10 +28,8 @@
 							<div class="half">
 								<img class="r-image" src="https://via.placeholder.com/700" title="image title" />
 							</div>
-							<h3>Steven Sclafani</h3>
 							<div class="half">
-								<h4>ARTS 486 <br />
-								Computer Graphics</h4>
+								<h5>ARTS 486: Computer Graphics</h5>
 								<p>Senior graphic design major at Binghamton University. </p>
 								<p>
 									<a href="http://steven.binghamton-design.com" target="_blank">ARTS 412 </a> <a href="http://binghamton.edu" target="_blank">This is another link</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
