--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<div class="aside-holder">
 						<div class="thumb-box">
 							<div class="half">
-								<img class="r-image" src="crown.png" title="Logo" />
+								<img class="r-image" src="images/crown.png" title="Logo" />
 							</div>
 							<div class="half">
 								<h5>ARTS 486: Computer Graphics</h5>
