--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 								<h5>ARTS 486: Computer Graphics</h5>
 								<p>Senior graphic design major at Binghamton University. </p>
 								<p>
-									<a href="http://steven.binghamton-design.com" target="_blank">ARTS 412 </a> <a href="http://binghamton.edu" target="_blank">This is another link</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
+									<a href="http://steven.binghamton-design.com" target="_blank">ARTS 412 </a> 
+									<a href="http://binghamton.edu" target="_blank">This is another link</a>
+									<a href="http://binghamton.edu" target="_blank">Third link</a>
 								</p>
 							</div>
 						</div>
