--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<h1>As We May Rethink Sketch</h1>
 						<p>My initial ideas for the Camera of the Future was to modernize it to keep up with today's industry standards. The Camera of the Future will require bluetooth connection and a mobile smartphone app to utilize its full capabilities.
 						</p>
-						<p><a href="images/funcspec2.pdf" target="_blank"> <font color=F2243c> Functional Specifications </a>
+						<p><a href="images/funcspec2.pdf" target="_blank"> Functional Specifications </a>
 					</div>
 				</div>
 
