--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
-						<h1>Project 1:  Ipsum Lorem</h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
+						<h1>Microcam Advertisement</h1>
+						<p><img class="r-image" src="images/ad1.png" title="Microcam Advertisement"></p>
+						<p>Advertisement and product descrirption of Microcam.  
 						</p>
+						<p><a href="images/ad.pdf" target="_blank"> <font color=F2243c> Product Advertisement </a> </font></a></p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
