--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
 				</div>
 
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
+					<img class="r-image" src="images/ad1.png" title="Microcam Advertisement" />
 					<div class="body">
 						<h1>Microcam Advertisement</h1>
-						<p><img class="r-image" src="images/ad1.png" title="Microcam Advertisement"></p>
 						<p>Advertisement and product descrirption of Microcam.  
 						</p>
-						<p><a href="images/ad.pdf" target="_blank"> <font color=F2243c> Product Advertisement </a> </font></a></p>
+						<p><a href="images/ad.pdf" target="_blank"> <font color=F2243c> Product Advertisement </a> </p>
 					</div>
 				</div>
+				
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
