--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
 					</div>
 				</div>
 
+				<div class="width-6-12-m width-4-12 thumb">
+					<img class="r-image" src="images/ad1.png" title="Microcam Advertisement" />
+					<div class="body">
+						<h1>Microcam Advertisement</h1>
+						<p>Advertisement and product descrirption of Microcam.  
+						</p>
+						<p><a href="images/ad.pdf" target="_blank"> <font color=F2243c> Product Advertisement </a> </p>
+					</div>
+				</div>
+
+		
 
 		<div id="footer">
 			<p>©2020 Steven Sclafani| Binghamton University</p>
