--- a/data-portrait/index.html
+++ b/data-portrait/index.html
@@ -14,13 +14,13 @@
       <div id="portrait-holder">
         <div id="portrait-info">
         <h1>My Data Portraits</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>This survey consists of responses based off of a skincare questionnaire. The survey explores the users' skincare routines, habits, and purchasing factors. </p>
         <p><a id="key-btn" href="#">View Key</a></p>
         </div>
         <div id="portrait">
           <div id="sketch-over">
             <a id="close" href="#"><img src="images/close.svg"></a>
-            key goes here (use a 500x500 image)
+            <img src="images/key.png" />
           </div>
           <div id="sketch"></div>
           <div class="dotstyle dotstyle-fillup">
