--- a/index.html
+++ b/index.html
@@ -83,14 +83,32 @@
 					
 
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
+					<img class="r-image" src="images/question.png" title="Questionnaire" />
 					<div class="body">
-						<h1>Project 1:  Ipsum Lorem</h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
+						<h1>Questionnaire</h1>
+						<p>Skincare questionnaire given to 15 participants regarding their skincare routine, habits, and purchasing factors. 
 						</p>
 					</div>
-		
+
+
+				<div class="width-6-12-m width-4-12 thumb">
+					<img class="r-image" src="images/key.png" title="Key" />
+					<div class="body">
+						<h1>Key</h1>
+						<p>Response key to the questionnaire. 
+						</p>
+						<p><a href="images/key.png" target="_blank"> <font color=F2243c> Key </font></a></p>
+					</div>
+
+
+				<div class="width-6-12-m width-4-12 thumb">
+					<img class="r-image" src="images/thumbnail.png" title="Data Portraits" />
+					<div class="body">
+						<h1>Data Portraits</h1>
+						<p>Finalized version of data portraits based on skincare questionairre.
+						</p>
+						<p><a href="" target="_blank"> <font color=F2243c> Data Portraits </font></a></p>
+					</div>
 
 		<div id="footer">
 			<p>©2020 Steven Sclafani| Binghamton University</p>
