--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
 
 
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="images/key.png" title="Key" />
+					<img class="r-image" src="images/key1.png" title="Key" />
 					<div class="body">
 						<h1>Key</h1>
 						<p>Response key to the questionnaire. 
 						</p>
-						<p><a href="images/key.png" target="_blank"> <font color=F2243c> Key </font></a></p>
+						<p><a href="images/key1.png" target="_blank"> <font color=F2243c> Key </font></a></p>
 					</div>
 
 
