--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					
 
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="images/question.png" title="Questionnaire" />
+					<img class="r-image" src="images/questionthumb.png" title="Questionnaire" />
 					<div class="body">
 						<h1>Questionnaire</h1>
 						<p>Skincare questionnaire given to 15 participants regarding their skincare routine, habits, and purchasing factors. 
@@ -92,7 +92,7 @@
 
 
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="images/key1.png" title="Key" />
+					<img class="r-image" src="images/keythumb.png" title="Key" />
 					<div class="body">
 						<h1>Key</h1>
 						<p>Response key to the questionnaire. 
