--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						<h1>Data Portraits</h1>
 						<p>Finalized version of data portraits based on skincare questionairre.
 						</p>
-						<p><a href="" target="_blank"> <font color=F2243c> Data Portraits </font></a></p>
+						<p><a href="stevensclafani.com/data-portrait" target="_blank"> <font color=F2243c> Data Portraits </font></a></p>
 					</div>
 
 		<div id="footer">
