--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 						<h1>Questionnaire</h1>
 						<p>Skincare questionnaire given to 15 participants regarding their skincare routine, habits, and purchasing factors. 
 						</p>
+						<p><a href="images/question.png" target="_blank"> Skincare Questionnaire </a> </p>
 					</div>
 
 
@@ -97,7 +98,7 @@
 						<h1>Key</h1>
 						<p>Response key to the questionnaire. 
 						</p>
-						<p><a href="images/key1.png" target="_blank"> <font color=F2243c> Key </font></a></p>
+						<p><a href="images/key1.png" target="_blank"> Key </a></p>
 					</div>
 
 
