--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<h1>Data Portraits</h1>
 						<p>Finalized version of data portraits based on skincare questionairre.
 						</p>
-						<p> <a href="/data-portrait/">Responses</a>		
+						<p> <a href="/data-portrait/" target="_blank">Responses</a>		
 					</div>
 
 		<div id="footer">
