--- a/index.html
+++ b/index.html
@@ -105,9 +105,12 @@
 						<h1>Data Portraits</h1>
 						<p>Finalized version of data portraits based on skincare questionairre.
 						</p>
-						<p> <a href="/data-portrait/" target="_blank">Responses</a>		
+						<p> <a href="/data-portrait/" target="_blank">Responses</a>	</p> 
 					</div>
-
+				</div>
+			</div>
+		</div>
+	</font>
 		<div id="footer">
 			<p>©2020 Steven Sclafani| Binghamton University</p>
 		</div>
