--- a/index.html
+++ b/index.html
@@ -65,52 +65,54 @@
 						<h1>Microcam Userflow Diagram</h1>
 						<p> The diagram consists of four speicifc users with intentions of using the Microcam & accompanying app. The app user flow displays the elementary processes in starting up and using the Microcam application.
 						</p>
-						<p><a href="images/userflow.pdf" target="_blank"> <font color=F2243c> User Flow </a>
-						<a href="images/userflowXD.pdf" target="_blank"> <font color=F2243c> User Flow XD </a> 
-						<a href="images/userflow2.pdf" target="_blank"> <font color=F2243c> Alternate View XD </a> </p> 
+						<p><a href="images/userflow.pdf" target="_blank">User Flow </a>
+						<a href="images/userflowXD.pdf" target="_blank">User Flow XD </a> 
+						<a href="images/userflow2.pdf" target="_blank">Alternate View XD </a> </p> 
 					</div>
 				</div>
 
-				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="images/ad1.png" title="Microcam Advertisement" />
-					<div class="body">
-						<h1>Microcam Advertisement</h1>
-						<p>Advertisement and product descrirption of Microcam.  
-						</p>
-						<p><a href="images/ad.pdf" target="_blank"> <font color=F2243c> Product Advertisement </a> </p>
-					</div>
-				</div>
 
-				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="images/questionthumb.png" title="Questionnaire" />
-					<div class="body">
-						<h1>Questionnaire</h1>
-						<p>Skincare questionnaire given to 15 participants regarding their skincare routine, habits, and purchasing factors. 
-						</p>
-						<p><a href="images/question.png" target="_blank"> Skincare Questionnaire </a> </p>
-					</div>
+        <div class="width-6-12-m width-4-12 thumb">
+          <img class="r-image" src="images/questionthumb.png" title="Questionnaire" />
+          <div class="body">
+            <h1>Questionnaire</h1>
+            <p>Skincare questionnaire given to 15 participants regarding their skincare routine, habits, and purchasing factors. 
+            </p>
+            <p><a href="images/question.png" target="_blank"> Skincare Questionnaire </a> </p>
+          </div>
+        </div>
 
-				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="images/keythumb.png" title="Key" />
-					<div class="body">
-						<h1>Key</h1>
-						<p>Response key to the questionnaire. 
-						</p>
-						<p><a href="images/key1.png" target="_blank"> Key </a></p>
-					</div>
+        <div class="width-6-12-m width-4-12 thumb">
+          <img class="r-image" src="images/keythumb.png" title="Key" />
+          <div class="body">
+            <h1>Key</h1>
+            <p>Response key to the questionnaire. 
+            </p>
+            <p><a href="images/key1.png" target="_blank"> Key </a></p>
+          </div>
+        </div>
 
-				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="images/thumbnail.png" title="Data Portraits" />
-					<div class="body">
-						<h1>Data Portraits</h1>
-						<p>Finalized version of data portraits based on skincare questionairre.
-						</p>
-						<p> <a href="/data-portrait/" target="_blank">Responses</a>	</p> 
-					</div>
-				</div>
-			</div>
+        <div class="width-6-12-m width-4-12 thumb">
+          <img class="r-image" src="images/thumbnail.png" title="Data Portraits" />
+          <div class="body">
+            <h1>Data Portraits</h1>
+            <p>Finalized version of data portraits based on skincare questionairre.
+            </p>
+            <p> <a href="/data-portrait/" target="_blank">Responses</a> </p> 
+          </div>
+        </div>
+
+        <div class="width-6-12-m width-4-12 thumb">
+          <img class="r-image" src="images/thumbnail.png" title="Data Portraits" />
+          <div class="body">
+            <h1>Data Portraits</h1>
+            <p>Finalized version of data portraits based on skincare questionairre.
+            </p>
+            <p> <a href="/data-portrait/" target="_blank">Responses</a> </p> 
+          </div>
+        </div>
+
 		</div>
-	</font>
 		<div id="footer">
 			<p>©2020 Steven Sclafani| Binghamton University</p>
 		</div>
