--- a/index.html
+++ b/index.html
@@ -103,18 +103,18 @@
         </div>
 
         <div class="width-6-12-m width-4-12 thumb">
-          <img class="r-image" src="images/thumbnail.png" title="Data Portraits" />
+          <img class="r-image" src="images/finalthumb.png" title="Data Portraits" />
           <div class="body">
-            <h1>Data Portraits</h1>
-            <p>Finalized version of data portraits based on skincare questionairre.
+            <h1>Closed Studio Night</h1>
+            <p>Final example of one data portrait for use at Closed Studio Night.
             </p>
-            <p> <a href="/data-portrait/" target="_blank">Responses</a> </p> 
+            <p> <a href="images/final.png" target="_blank">Responses</a> </p> 
           </div>
         </div>
 
 		</div>
 		<div id="footer">
-			<p>©2020 Steven Sclafani| Binghamton University</p>
+			<p>©2020 Steven Sclafani | Binghamton University</p>
 		</div>
 
 	</body>
