--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h1>Closed Studio Night</h1>
             <p>Final example of one data portrait for use at Closed Studio Night.
             </p>
-            <p> <a href="images/final.png" target="_blank">Responses</a> </p> 
+            <p> <a href="images/final.png" target="_blank">Final Image</a> </p> 
           </div>
         </div>
 
